syntax = "proto3";

option go_package = "./;proto";


message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message SetRequest {
  string key = 1;
  bytes value =2;
}

message SetResponse {
  bool status=1;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool status=1;
}

message PingRequest {
  string msg = 1;
}

message PingResponse {
  int32 code=1;
}

service GroupCache {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Del(DelRequest) returns (DelResponse);
  rpc Ping(PingRequest) returns(PingResponse);
}

